--- a/mbs/config/initial_config.json
+++ b/mbs/config/initial_config.json
@@ -5,5 +5,7 @@
     "password": "user1",
     "host": "127.0.0.1"
   },
-  "mess_bill": "https://s3.ap-south-1.amazonaws.com/mbsdemo/mess_menu.pdf"
+  "mess_menu": "https://s3.ap-south-1.amazonaws.com/mbsdemo/mess_menu.pdf",
+  "due_date": "2018-10-23",
+  "payment_provider_token": "MBS"
 }
